welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:2: error: ')' expected but '.' found.
  for (i<-  to nums.length-3){
                   ^noTriples:7: error: illegal start of simple expression
} 
^