welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
  for (i<-  to nums.length-3){
    if (nums(i)==nums(i+1)&&nums(i+1)==nums(i+2)){
      return true
    }else{return false}
  }
}